[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "subkey"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
futures = "0.3.9"
hex = "0.4.2"
thiserror = "1.0.30"
rpassword = "5.0.0"
tiny-bip39 = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.74"
tokio = { version = "1.15", features = ["signal", "rt-multi-thread"] }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-service = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-keystore = { version = "0.11.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-io = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }